Fixing issue with overflow-x.

--- a/source/stylesheets/pokiandpitt.css.sass
+++ b/source/stylesheets/pokiandpitt.css.sass
@@ -10,7 +10,6 @@
 // Vendor
 @import animated-hamburguer-icon.sass
 @import vendor/bootstrap-grid.scss
-@import vendor/slick.scss
 @import vendor/jquery.magnific-popup.scss
 
 // Sections
@@ -25,6 +24,9 @@
 @import map.sass
 @import gallery.sass
 @import counter.sass
+
+html, body
+  overflow-x: hidden
   
 body
   -webkit-text-size-adjust: 100%
